--- a/unidade06/exercicio02/index.html
+++ b/unidade06/exercicio02/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="ISO-8859-2">
         <title>Curso HTML5 Essencial</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -10,15 +11,15 @@
 
         <h3>Modo de preparo</h3>
         
-        <img src="imagens/pato_laranja.jpg" width="120" height="120"
+        <img class="img" src="imagens/pato_laranja.jpg" width="120" height="120"
              title="Foto do prato Pato com Laranja"
              alt="Foto do prato Pato com Laranja"
              >
 
-        <p>Descasque as batatas e cozinhe até ficarem al dente. Retire toda a polpa das laranjas e corte as cascas em tiras finas. Deixe ferver as cascas em uma panela, por cinco minutos, e coe-as. Repita o processo por 3 vezes para tirar o amargo da casca. Mas guarde a água da fervura e reserve as cascas. </p>
+        <p class="destaqui">Descasque as batatas e cozinhe até ficarem al dente. Retire toda a polpa das laranjas e corte as cascas em tiras finas. Deixe ferver as cascas em uma panela, por cinco minutos, e coe-as. Repita o processo por 3 vezes para tirar o amargo da casca. Mas guarde a água da fervura e reserve as cascas. </p>
 
         <h3 style="clear:left">Ingredientes</h3>
-        <ul>
+        <ul class="ingredientes">
             <li>1 pato inteiro limpo</li>
             <li>500g batata pequena</li>
             <li>Suco de 3 laranjas</li>
