--- a/unidade08/exercicio04/index.html
+++ b/unidade08/exercicio04/index.html
@@ -9,6 +9,12 @@
 			body {
 				font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 				font-size:13px;
+				text-align: center;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 100vh;
+				flex-direction: row;
 			}
 			
 			ul {
@@ -18,6 +24,7 @@
 			
 			li {
 				list-style:none;
+				display: flex;
 			}
 			
 			li a {
@@ -27,10 +34,12 @@
 				background-color:#09C;
 				margin-bottom:1px;
 				padding:5px 3px;
+				width:200px;
 			}
 			
 			li a:hover {
-				background-color:#6CF
+				background-color:black;
+				color:#fff;	
 			}
         </style>
         
