--- a/unidade12/exercicio01/tabela1.html
+++ b/unidade12/exercicio01/tabela1.html
@@ -1,13 +1,25 @@
 <!doctype html>
 <html lang="pt_BR">
- 
-    <head>
-        <meta charset="utf-8">
-        <title>Cursos HTML5 Essencial</title>
-    </head>
-    
-    <body>
 
-	</body>
-    
+<head>
+    <meta charset="utf-8">
+    <title>Cursos HTML5 Essencial</title>
+</head>
+
+<body>
+    <!--Tabelas dados tabulados forma que na se deve usar-->
+    <table border="1"   width="50%">
+        <tr class="Brasil">
+            <td>Brasil</td>
+            <td>10 meldalhas de ouro</td>
+        </tr>
+
+        <tr>
+            <td>Paraguai</td>
+            <td>20 Medalhas de prata</td>
+        </tr>
+    </table>
+
+</body>
+
 </html>
