--- a/unidade13/exercicio08/index.html
+++ b/unidade13/exercicio08/index.html
@@ -6,8 +6,17 @@
     </head>
 
     <body>
+
+       
         <form action="index.html" method="post">
-            
+    <label for="">Selecione um loja</label>            
+            <input type="text" list="lista-lojas" name="lojas" id="lojas" placeholder="Selecione uma loja">   
+
+            <datalist id="lista-lojas">
+                <option value="Centauro">Centauro</option>
+                <option value="Centro Automotivos"></option>
+                <option value="Centro Aotico">Centro aotico</option>
+            </datalist>
         </form>
     </body>
 </html>
